Fri Jul 16 14:03:13 CEST 2010 Christian Anthon <anthon@kiku.dk>

	* render.c: fix clockwise display. Bar was reversed.

Mon Jul  5 20:00:46 CEST 2010 Christian Anthon <anthon@kiku.dk>

	* format.c: fix text output of rolled out cube analysis

Mon Jul  5 19:39:35 CEST 2010 Christian Anthon <anthon@kiku.dk>

	* play.c: remove TurnDone from CancelCubeAction. Fixes a batch analyse
	bug.

Fri Jun 25 16:00:08 CEST 2010 Christian Anthon <anthon@kiku.dk>

	* gtkfile.c: Show the discard dialog before batch analyse starts.

Fri Jun 25 10:49:12 CEST 2010 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, commands.inc, gnubg.c, gtkboard.c, set.c: support for
	xg ids - please test

Thu Jun 24 01:31:48 CEST 2010 Christian Anthon <anthon@kiku.dk>

	* analysis.c: don't refind move, when none made

Sun Jun 20 17:42:38 CEST 2010 Christian Anthon <anthon@kiku.dk>

	* analysis.c: refind made move after cmark_rollout

Sat Jun 19 09:22:16 CEST 2010 Christian Anthon <anthon@kiku.dk>

	* eval.c, import.c: Fix a counting error in the import match code. Ask
	if you want to try another variation after the first one fails.

2010-06-02  Philippe Michel  <philippe.michel7@sfr.fr>

	* commands.inc, file.c: if an export format is not supported by
	the build, #if it out of the UI.

	* configure.in, export.c, gnubgmodule.c : patches by Christopher
	Hofmann via bug-gnubg@gnu.org

2010-05-29  Philippe Michel  <philippe.michel7@sfr.fr>

	* rollout.c: partial fix for stop-on-jsd criterion
	From http://lists.gnu.org/archive/html/bug-gnubg/2010-01/msg00041.html
	
	* matchequity.c: wasteful computations in GetPoints()
	Pointed by Massimiliano Maini in
	http://lists.gnu.org/archive/html/bug-gnubg/2009-07/msg00002.html
	
2010-05-26  Philippe Michel  <philippe.michel7@sfr.fr>

	* gtkgame.c: compiles again with pre-2.12 gtk
	From http://lists.gnu.org/archive/html/bug-gnubg/2009-11/msg00016.html

2010-05-23  Philippe Michel  <philippe.michel7@sfr.fr>
